--- a/dhxmia1.html
+++ b/dhxmia1.html
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="#">Home</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
@@ -191,7 +191,7 @@
                     <div class="mb-3">
                       <div class="form-floating mb-3">
                         <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name="email" required>
-                        <label for="floatingInput">Email</label>
+                        <label for="floatingInput">Email</label><strong><label style="color:rgb(245, 10, 10)"> [*]</label></strong>
                       </div>
                       <!-- <label for="email" class="form-label">Email</label>
                       <input type="email" class="form-control" id="email" aria-describedby="email" placeholder="example@email.com" name="email"> -->
