tambah upload x mia 1

--- a/xmia1.html
+++ b/xmia1.html
@@ -135,6 +135,10 @@
                          </select>
                        <!-- <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea> -->
                    </div>
+                   <div class="input-group mb-3">
+                    <input type="file" class="form-control" id="inputGroupFile02">
+                    <label class="input-group-text" for="inputGroupFile02" name="upload">Upload</label>
+                  </div>
                    <div class="mb-3 text-start">
                    <strong><label style="color:rgb(245, 10, 10)">[*]</label></strong><label style="color:rgb(0, 0, 0)">Wajib Diisi!</label>
                    </div>
