tambah ikon home dan dh

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">              
-              <a id="elemen" class="nav-link active" aria-current="page" href="#"><i class="bi bi-house-fill"></i></a>
+              <a class="nav-link active" aria-current="page" href="#"><i id="elemen" class="bi bi-house-fill"></i></a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
@@ -41,7 +41,7 @@
               <a class="nav-link" href="#gallery">Gallery</a>
             </li> -->
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false"><i id="daftar" class="bi bi-pencil-square"></i>Daftar Hadir</a>
+              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false"><i id="daftar" class="bi bi-pencil-square"></i>  Daftar Hadir</a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item text-center" href="xmia1.html">X MIA 1</a></li>
                 <li><a class="dropdown-item text-center" href="xmia2.html">X MIA 2</a></li>
