--- a/xmia4.html
+++ b/xmia4.html
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="index.html"><i id="elemen" class="bi bi-house-fill"></i></a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
@@ -41,13 +41,13 @@
               <a class="nav-link" href="#gallery">Gallery</a>
             </li> -->
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Daftar Hadir</a>
+              <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false"><i id="daftar" class="bi bi-pencil-square"></i>  Daftar Hadir</a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item text-center" href="xmia1.html">X MIA 1</a></li>
                 <li><a class="dropdown-item text-center" href="xmia2.html">X MIA 2</a></li>
                 <li><a class="dropdown-item text-center" href="xmia3.html">X MIA 3</a></li>
                 <li><a class="dropdown-item p-2 mb-1 bg-secondary text-white text-center" href="dhxmia4.html">X MIA 4</a></li>
-                <li><a class="dropdown-item text-center" href="xmia4.html">X MIA 5</a></li>                
+                <li><a class="dropdown-item text-center" href="xmia5.html">X MIA 5</a></li>                
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item text-center" href="xiimia4.html">XII MIA 4</a></li>
                 <li><a class="dropdown-item text-center" href="xiimia5.html">XII MIA 5</a></li>                
