--- a/xiimia6.html
+++ b/xiimia6.html
@@ -51,7 +51,7 @@
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item text-center" href="xiimia4.html">XII MIA 4</a></li>
                 <li><a class="dropdown-item text-center" href="xiimia5.html">XII MIA 5</a></li>                
-                <li><a class="dropdown-item p-2 mb-1 bg-secondary text-white text-center" href="dhxiimia6.html">XII MIA 6</a></li>                
+                <li><a class="dropdown-item p-2 mb-1 bg-secondary text-white text-center" href="xiimia6.html">XII MIA 6</a></li>                
               </ul>
             </li>                      
         </div>
@@ -65,7 +65,7 @@
     <div class="card text-center">
       <div class="card-header">
         <div class="row text-center">              
-                <h3>Daftar Hadir - X MIA 1</h3>              
+                <h3>Daftar Hadir - XII MIA 6</h3>              
           </div>
       </div>
       <div class="card-body">
