--- a/xiimia4.html
+++ b/xiimia4.html
@@ -49,7 +49,7 @@
                 <li><a class="dropdown-item text-center" href="xmia4.html">X MIA 4</a></li>
                 <li><a class="dropdown-item text-center" href="xmia4.html">X MIA 5</a></li>                
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item p-2 mb-1 bg-secondary text-white text-center" href="dhxiimia4.html">XII MIA 4</a></li>
+                <li><a class="dropdown-item p-2 mb-1 bg-secondary text-white text-center" href="xiimia4.html">XII MIA 4</a></li>
                 <li><a class="dropdown-item text-center" href="xiimia5.html">XII MIA 5</a></li>                
                 <li><a class="dropdown-item text-center" href="xiimia6.html">XII MIA 6</a></li>                
               </ul>
