--- a/xmia1.html
+++ b/xmia1.html
@@ -44,11 +44,11 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false"><i id="daftar" class="bi bi-pencil-square"></i>  Daftar Hadir</a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item p-2 mb-1 bg-secondary text-white text-center" href="xmia1.html">X MIA 1</a></li>
+                <li><a class="dropdown-item p-2 mb-1 bg-secondary text-white text-center" href="xmia1.html"><i class="bi bi-chevron-double-right"></i>   X MIA 1</a></li>
                 <li><a class="dropdown-item text-center" href="xmia2.html">X MIA 2</a></li>
                 <li><a class="dropdown-item text-center" href="xmia3.html">X MIA 3</a></li>
                 <li><a class="dropdown-item text-center" href="xmia4.html">X MIA 4</a></li>
-                <li><a class="dropdown-item text-center" href="xmia4.html">X MIA 5</a></li>                
+                <li><a class="dropdown-item text-center" href="xmia5.html">X MIA 5</a></li>                
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item text-center" href="xiimia4.html">XII MIA 4</a></li>
                 <li><a class="dropdown-item text-center" href="xiimia5.html">XII MIA 5</a></li>                
