--- a/xmia1.html
+++ b/xmia1.html
@@ -47,15 +47,15 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Hardiwan</a>
+        <a class="navbar-brand" href="index.html"><i id="elemen" class="bi bi-house-fill"></i></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" aria-current="page" href="index.html"><i id="elemen" class="bi bi-house-fill"></i></a>
-            </li>
+            </li> -->
             
             <!-- <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
@@ -64,7 +64,7 @@
               <a class="nav-link" href="#gallery">Gallery</a>
             </li> -->
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false"><i id="daftar" class="bi bi-pencil-square"></i>  Daftar Hadir</a>
+              <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false"><i id="daftar" class="bi bi-pencil-square"></i></a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item p-2 mb-1 bg-secondary text-white text-center" href="xmia1.html"><i class="bi bi-chevron-double-right"></i>   X MIA 1</a></li>
                 <li><a class="dropdown-item text-center" href="xmia2.html">X MIA 2</a></li>
